--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-    margin: 20;
-    background-color: beige;
+    height: 100%;
+    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
